[package]
name = "serror"
description = "serialize anyhow errors into json format"
version = "0.4.7"
edition = "2021"
authors = ["MoghTech"]
repository = "https://github.com/mbecker20/serror"
license = "MIT"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# axum feature
axum = { version = "0.7", features = ["macros"], optional = true }
